feat: adicionada rota PATCH e documentação das rotas de cadastro e atualização parcial de filmes
